Minor page spacing and header alignment fixes

--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -19,7 +19,8 @@
 
 .searchHeader{
   float: left;
-  margin-left: 200px;
+  margin-left: 180px;
+  margin-top: 15px;
 }
 
 .navbar{
@@ -108,7 +109,7 @@ p {
 h1 {
   margin-top: 2rem;
   margin-bottom: 2rem;
-  font-size: 3em;
+  font-size: 2.9em;
   text-align: center;
 
 
