--- a/src/client/src/rideform.css
+++ b/src/client/src/rideform.css
@@ -17,6 +17,7 @@
       padding: 10px 60px 10px 60px;
       border-radius: 10px;
       width: 500px;
+      margin-bottom: 30px;
   }
   
   h1{
